# tessellinx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  colors.cxx  colors.h  dlx.cxx  dlx.h  main.cxx  reporting.cxx  reporting.h  shapes.cxx  shapes.h  video.cxx  video.h
boards/: mask_8x8_2x2_hole.txt  mask_8x8_four_holes.txt  mask_heart_120.txt  mask_heart_60_a.txt  mask_heart_60_b.txt  test_board.txt  test_long_board.txt
